language change on selection, menu component (work in progress)

--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -4,5 +4,6 @@
     "welcome.or_text": "oder",
     "welcome.register_button": "Konto erstellen",
     "welcome.help_button": "Brauchst du Hilfe?",
-    "welcome.imprint": "Impressum"
+    "welcome.imprint": "Impressum",
+    "welcome.select_language": "Sprache auswählen"
 }
