--- a/muensterdiscovery/src/i18n/en.json
+++ b/muensterdiscovery/src/i18n/en.json
@@ -5,5 +5,11 @@
     "welcome.register_button": "Create an Account",
     "welcome.help_button": "Need Help?",
     "welcome.imprint": "Imprint",
-    "welcome.select_language": "Select Language"
+    "welcome.select_language": "Select Language",
+
+    "menu.profile": "Profile",
+    "menu.help": "Help",
+    "menu.open-world": "Open World",
+    "menu.routeselection": "Route Selection",
+    "menu.leaderboard": "Leaderboard"
 }
