--- a/muensterdiscovery/src/i18n/fr.json
+++ b/muensterdiscovery/src/i18n/fr.json
@@ -11,5 +11,10 @@
     "menu.help": "Aide",
     "menu.open-world": "Monde ouvert",
     "menu.routeselection": "Sélection du parcours",
-    "menu.leaderboard": "Classement"
+    "menu.leaderboard": "Classement",
+    
+    "imprint.title": "Mentions légales",
+    "imprint.content": "Ce projet est un projet d'études dans le cadre du master en Géoinformatique et Science des Données Spatiales. Le code source et la documentation sont disponibles sur GitHub :",
+    "imprint.github_link_text": "Dépôt GitHub",
+    "imprint.home_button": "Retour à l'accueil"
 }
