--- a/muensterdiscovery/src/i18n/pt.json
+++ b/muensterdiscovery/src/i18n/pt.json
@@ -11,5 +11,10 @@
     "menu.help": "Ajuda",
     "menu.open-world": "Mundo aberto",
     "menu.routeselection": "Seleção de rota",
-    "menu.leaderboard": "Ranking"
+    "menu.leaderboard": "Ranking",
+    
+    "imprint.title": "Aviso legal",
+    "imprint.content": "Este projeto é um projeto de estudo como parte do mestrado em Geoinformática e Ciência de Dados Espaciais. Código-fonte e documentação estão disponíveis no GitHub:",
+    "imprint.github_link_text": "Repositório GitHub",
+    "imprint.home_button": "Voltar para a página inicial"
 }
