--- a/muensterdiscovery/src/i18n/es.json
+++ b/muensterdiscovery/src/i18n/es.json
@@ -11,5 +11,10 @@
     "menu.help": "Ayuda",
     "menu.open-world": "Mundo abierto",
     "menu.routeselection": "Selección de ruta",
-    "menu.leaderboard": "Clasificación"
+    "menu.leaderboard": "Clasificación",
+    
+    "imprint.title": "Aviso legal",
+    "imprint.content": "Este proyecto es un proyecto de estudio como parte del programa de Máster en Geoinformática y Ciencia de Datos Espaciales. El código fuente y la documentación están disponibles en GitHub:",
+    "imprint.github_link_text": "Repositorio de GitHub",
+    "imprint.home_button": "Volver a la página principal"
 }
