--- a/muensterdiscovery/src/i18n/jp.json
+++ b/muensterdiscovery/src/i18n/jp.json
@@ -11,5 +11,10 @@
     "menu.help": "ヘルプ",
     "menu.open-world": "オープンワールド",
     "menu.routeselection": "ルート選択",
-    "menu.leaderboard": "ランキング"
+    "menu.leaderboard": "ランキング",
+    
+    "imprint.title": "法的情報",
+    "imprint.content": "本プロジェクトは、地理情報学および空間データサイエンス修士課程の学習プロジェクトです。ソースコードとドキュメントはGitHubで公開されています：",
+    "imprint.github_link_text": "GitHub リポジトリ",
+    "imprint.home_button": "ホームに戻る"
 }
