--- a/muensterdiscovery/src/i18n/it.json
+++ b/muensterdiscovery/src/i18n/it.json
@@ -16,5 +16,8 @@
     "imprint.title": "Note legali",
     "imprint.content": "Questo progetto è un progetto di studio nell'ambito del corso di laurea magistrale in Geoinformatica e Scienze dei Dati Spaziali. Il codice sorgente e la documentazione sono disponibili su GitHub:",
     "imprint.github_link_text": "Repository GitHub",
-    "imprint.home_button": "Torna alla home"
+    "imprint.home_button": "Torna alla home",
+
+    "openworld.loading": "Caricamento mercatini di Natale...",
+    "openworld.more_info": "Maggiori informazioni"
 }
