--- a/muensterdiscovery/src/i18n/pl.json
+++ b/muensterdiscovery/src/i18n/pl.json
@@ -16,5 +16,8 @@
     "imprint.title": "Nota prawna",
     "imprint.content": "Ten projekt to projekt studencki w ramach studiów magisterskich z Geoinformatics and Spatial Data Science. Kod źródłowy i dokumentacja są dostępne na GitHub:",
     "imprint.github_link_text": "Repozytorium GitHub",
-    "imprint.home_button": "Powrót do strony głównej"
+    "imprint.home_button": "Powrót do strony głównej",
+
+    "openworld.loading": "Ładowanie jarmarków bożonarodzeniowych...",
+    "openworld.more_info": "Więcej informacji"
 }
