--- a/muensterdiscovery/src/i18n/ru.json
+++ b/muensterdiscovery/src/i18n/ru.json
@@ -15,5 +15,8 @@
     "imprint.title": "Выходные данные",
     "imprint.content": "Этот проект является учебным проектом в рамках магистерской программы «Геоинформатика и наука о пространственных данных». Исходный код и документация доступны на GitHub:",
     "imprint.github_link_text": "Репозиторий GitHub",
-    "imprint.home_button": "Вернуться на главную"
+    "imprint.home_button": "Вернуться на главную",
+
+    "openworld.loading": "Загрузка рождественских рынков...",
+    "openworld.more_info": "Подробнее"
 }
