--- a/muensterdiscovery/src/i18n/es.json
+++ b/muensterdiscovery/src/i18n/es.json
@@ -16,5 +16,8 @@
     "imprint.title": "Aviso legal",
     "imprint.content": "Este proyecto es un proyecto de estudio como parte del programa de Máster en Geoinformática y Ciencia de Datos Espaciales. El código fuente y la documentación están disponibles en GitHub:",
     "imprint.github_link_text": "Repositorio de GitHub",
-    "imprint.home_button": "Volver a la página principal"
+    "imprint.home_button": "Volver a la página principal",
+
+    "openworld.loading": "Cargando mercados navideños...",
+    "openworld.more_info": "Más información"
 }
