--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -16,5 +16,8 @@
     "imprint.title": "Colofon",
     "imprint.content": "Dit project is een studieproject in het kader van de masteropleiding Geoinformatics and Spatial Data Science. Broncode en documentatie zijn beschikbaar op GitHub:",
     "imprint.github_link_text": "GitHub-repository",
-    "imprint.home_button": "Terug naar startpagina"
+    "imprint.home_button": "Terug naar startpagina",
+
+    "openworld.loading": "Kerstmarkten laden...",
+    "openworld.more_info": "Meer informatie"
 }
