--- a/muensterdiscovery/src/i18n/sa.json
+++ b/muensterdiscovery/src/i18n/sa.json
@@ -16,5 +16,8 @@
     "imprint.title": "العلامات القانونية",
     "imprint.content": "هذا المشروع هو مشروع دراسي كجزء من برنامج الماجستير في الجغرافيا المعلوماتية وعلوم بيانات الفضاء. الشيفرة المصدرية والوثائق متاحة على GitHub:",
     "imprint.github_link_text": "مستودع GitHub",
-    "imprint.home_button": "العودة إلى الصفحة الرئيسية"
+    "imprint.home_button": "العودة إلى الصفحة الرئيسية",
+
+    "openworld.loading": "جاري تحميل أسواق عيد الميلاد...",
+    "openworld.more_info": "مزيد من المعلومات"
 }
