--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -16,5 +16,8 @@
     "imprint.title": "Yasal Uyarı",
     "imprint.content": "Bu proje, Coğrafi Bilişim ve Mekansal Veri Bilimi Yüksek Lisans programı kapsamında bir öğrenci projesidir. Kaynak kodu ve dokümantasyon GitHub'da mevcuttur:",
     "imprint.github_link_text": "GitHub Deposu",
-    "imprint.home_button": "Ana sayfaya geri dön"
+    "imprint.home_button": "Ana sayfaya geri dön",
+
+    "openworld.loading": "Noel pazarları yükleniyor...",
+    "openworld.more_info": "Daha fazla bilgi"
 }
