--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -19,5 +19,21 @@
     "imprint.home_button": "Zurück zur Startseite",
 
     "openworld.loading": "Lade Weihnachtsmärkte...",
-    "openworld.more_info": "Weitere Informationen"
+    "openworld.more_info": "Weitere Informationen",
+
+    "profile.greeting": "Hey, {username}!",
+    "profile.change_picture": "Profilbild ändern",
+    "profile.change_data": "Daten ändern",
+    "profile.logout": "Ausloggen",
+    "profile.explored_areas": "Explorierte Bereiche",
+    "profile.favorites": "Favoriten",
+    "profile.route1": "Historische Stadttour",
+    "profile.route2": "Promenade Rundweg",
+    "profile.achievements": "Auszeichnungen",
+    "profile.achievement1_title": "Stadtentdecker",
+    "profile.achievement1_desc": "5 verschiedene Bereiche erkundet",
+    "profile.achievement2_title": "Ausdauer-Maschine",
+    "profile.achievement2_desc": "Route mit mehr als 5 km abgeschlossen",
+    "profile.achievement3_title": "Weihnachtsmarkt-Fan",
+    "profile.achievement3_desc": "Alle Weihnachtsmärkte besucht"
 }
