Added welcome page to the menu

--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Open World",
     "menu.routeselection": "Routenauswahl",
     "menu.leaderboard": "Bestenliste",
+    "menu.welcome": "Startseite",
 
     "imprint.title": "Impressum",
     "imprint.content": "Dieses Projekt ist ein Studienprojekt im Rahmen des Masterstudiengangs Geoinformatics and Spatial Data Science der Universität Münster. Quellcode und Dokumentation sind auf GitHub verfügbar:",
