--- a/muensterdiscovery/src/i18n/en.json
+++ b/muensterdiscovery/src/i18n/en.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Open World",
     "menu.routeselection": "Route Selection",
     "menu.leaderboard": "Leaderboard",
+    "menu.welcome": "Home",
     
     "imprint.title": "Imprint",
     "imprint.content": "This project is a student project as part of the Master's program in Geoinformatics and Spatial Data Science. Source code and documentation are available on GitHub:",
