--- a/muensterdiscovery/src/i18n/fr.json
+++ b/muensterdiscovery/src/i18n/fr.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Monde ouvert",
     "menu.routeselection": "Sélection du parcours",
     "menu.leaderboard": "Classement",
+    "menu.welcome": "Accueil",
     
     "imprint.title": "Mentions légales",
     "imprint.content": "Ce projet est un projet d'études dans le cadre du master en Géoinformatique et Science des Données Spatiales. Le code source et la documentation sont disponibles sur GitHub :",
