--- a/muensterdiscovery/src/i18n/it.json
+++ b/muensterdiscovery/src/i18n/it.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Open World",
     "menu.routeselection": "Selezione percorso",
     "menu.leaderboard": "Classifica",
+    "menu.welcome": "Pagina iniziale",
     
     "imprint.title": "Note legali",
     "imprint.content": "Questo progetto è un progetto di studio nell'ambito del corso di laurea magistrale in Geoinformatica e Scienze dei Dati Spaziali. Il codice sorgente e la documentazione sono disponibili su GitHub:",
