--- a/muensterdiscovery/src/i18n/jp.json
+++ b/muensterdiscovery/src/i18n/jp.json
@@ -12,6 +12,7 @@
     "menu.open-world": "オープンワールド",
     "menu.routeselection": "ルート選択",
     "menu.leaderboard": "ランキング",
+    "menu.welcome": "ホーム",
     
     "imprint.title": "法的情報",
     "imprint.content": "本プロジェクトは、地理情報学および空間データサイエンス修士課程の学習プロジェクトです。ソースコードとドキュメントはGitHubで公開されています：",
