--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Open wereld",
     "menu.routeselection": "Routekeuze",
     "menu.leaderboard": "Ranglijst",
+    "menu.welcome": "Startpagina",
     
     "imprint.title": "Colofon",
     "imprint.content": "Dit project is een studieproject in het kader van de masteropleiding Geoinformatics and Spatial Data Science. Broncode en documentatie zijn beschikbaar op GitHub:",
