--- a/muensterdiscovery/src/i18n/pl.json
+++ b/muensterdiscovery/src/i18n/pl.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Otwarty świat",
     "menu.routeselection": "Wybór trasy",
     "menu.leaderboard": "Ranking",
+    "menu.welcome": "Strona główna",
     
     "imprint.title": "Nota prawna",
     "imprint.content": "Ten projekt to projekt studencki w ramach studiów magisterskich z Geoinformatics and Spatial Data Science. Kod źródłowy i dokumentacja są dostępne na GitHub:",
