--- a/muensterdiscovery/src/i18n/pt.json
+++ b/muensterdiscovery/src/i18n/pt.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Mundo aberto",
     "menu.routeselection": "Seleção de rota",
     "menu.leaderboard": "Ranking",
+    "menu.welcome": "Início",
     
     "imprint.title": "Aviso legal",
     "imprint.content": "Este projeto é um projeto de estudo como parte do mestrado em Geoinformática e Ciência de Dados Espaciais. Código-fonte e documentação estão disponíveis no GitHub:",
