--- a/muensterdiscovery/src/i18n/ru.json
+++ b/muensterdiscovery/src/i18n/ru.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Открытый мир",
     "menu.routeselection": "Выбор маршрута",
     "menu.leaderboard": "Таблица лидеров",
+    "menu.welcome": "Главная",
     "imprint.title": "Выходные данные",
     "imprint.content": "Этот проект является учебным проектом в рамках магистерской программы «Геоинформатика и наука о пространственных данных». Исходный код и документация доступны на GitHub:",
     "imprint.github_link_text": "Репозиторий GitHub",
