--- a/muensterdiscovery/src/i18n/sa.json
+++ b/muensterdiscovery/src/i18n/sa.json
@@ -12,6 +12,7 @@
     "menu.open-world": "العالم المفتوح",
     "menu.routeselection": "اختيار المسار",
     "menu.leaderboard": "قائمة المتصدرين",
+    "menu.welcome": "الصفحة الرئيسية",
     
     "imprint.title": "العلامات القانونية",
     "imprint.content": "هذا المشروع هو مشروع دراسي كجزء من برنامج الماجستير في الجغرافيا المعلوماتية وعلوم بيانات الفضاء. الشيفرة المصدرية والوثائق متاحة على GitHub:",
