--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Açık Dünya",
     "menu.routeselection": "Rota seçimi",
     "menu.leaderboard": "Liderler Sıralaması",
+    "menu.welcome": "Ana Sayfa",
     
     "imprint.title": "Yasal Uyarı",
     "imprint.content": "Bu proje, Coğrafi Bilişim ve Mekansal Veri Bilimi Yüksek Lisans programı kapsamında bir öğrenci projesidir. Kaynak kodu ve dokümantasyon GitHub'da mevcuttur:",
