--- a/muensterdiscovery/src/i18n/es.json
+++ b/muensterdiscovery/src/i18n/es.json
@@ -12,6 +12,7 @@
     "menu.open-world": "Mundo abierto",
     "menu.routeselection": "Selección de ruta",
     "menu.leaderboard": "Clasificación",
+    "menu.welcome": "Inicio",
     
     "imprint.title": "Aviso legal",
     "imprint.content": "Este proyecto es un proyecto de estudio como parte del programa de Máster en Geoinformática y Ciencia de Datos Espaciales. El código fuente y la documentación están disponibles en GitHub:",
