--- a/muensterdiscovery/src/i18n/it.json
+++ b/muensterdiscovery/src/i18n/it.json
@@ -36,5 +36,16 @@
     "profile.achievement2_title": "Macchina della resistenza",
     "profile.achievement2_desc": "Percorso di oltre 5 km completato",
     "profile.achievement3_title": "Fan dei mercatini di Natale",
-    "profile.achievement3_desc": "Tutti i mercatini di Natale visitati"
+    "profile.achievement3_desc": "Tutti i mercatini di Natale visitati",
+
+    "leaderboard.title": "Classifica",
+    "leaderboard.subtitle": "Chi ha esplorato meglio Münster?",
+    "stats.total_km": "Km della community",
+    "stats.total_spots": "Luoghi scoperti",
+    "stats.active_users": "Esploratori attivi",
+    "leaderboard.month": "Questo mese",
+    "leaderboard.alltime": "Classifica di tutti i tempi",
+    "leaderboard.user": "Utente",
+    "leaderboard.areas": "Aree",
+    "leaderboard.points": "Punti"
 }
