--- a/muensterdiscovery/src/i18n/sa.json
+++ b/muensterdiscovery/src/i18n/sa.json
@@ -36,5 +36,16 @@
     "profile.achievement2_title": "آلة التحمل",
     "profile.achievement2_desc": "إكمال مسار أكثر من 5 كم",
     "profile.achievement3_title": "محب أسواق عيد الميلاد",
-    "profile.achievement3_desc": "زيارة جميع أسواق عيد الميلاد"
+    "profile.achievement3_desc": "زيارة جميع أسواق عيد الميلاد",
+
+    "leaderboard.title": "قائمة المتصدرين",
+    "leaderboard.subtitle": "من اكتشف مِنستر بشكل أفضل؟",
+    "stats.total_km": "كم المجتمع",
+    "stats.total_spots": "الأماكن المكتشفة",
+    "stats.active_users": "المكتشفون النشطون",
+    "leaderboard.month": "هذا الشهر",
+    "leaderboard.alltime": "طوال الوقت",
+    "leaderboard.user": "مستخدم",
+    "leaderboard.areas": "المناطق",
+    "leaderboard.points": "النقاط"
 }
