--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -36,5 +36,16 @@
     "profile.achievement2_title": "Dayanıklılık makinesi",
     "profile.achievement2_desc": "5 km'den fazla rota tamamlandı",
     "profile.achievement3_title": "Noel pazarı hayranı",
-    "profile.achievement3_desc": "Tüm Noel pazarları ziyaret edildi"
+    "profile.achievement3_desc": "Tüm Noel pazarları ziyaret edildi",
+
+    "leaderboard.title": "Liderler Tablosu",
+    "leaderboard.subtitle": "Münster'i en iyi kim keşfetti?",
+    "stats.total_km": "Topluluk km",
+    "stats.total_spots": "Keşfedilen yerler",
+    "stats.active_users": "Aktif kaşifler",
+    "leaderboard.month": "Bu ay",
+    "leaderboard.alltime": "Tüm zamanlar",
+    "leaderboard.user": "Kullanıcı",
+    "leaderboard.areas": "Alanlar",
+    "leaderboard.points": "Puanlar"
 }
